# ShuttlePub

./: .env  Cargo.toml  docker-compose.yml
.github/workflows/: lint-and-test.yml
application/: Cargo.toml
application/src/: error.rs  interactor.rs  lib.rs  transfer.rs
application/src/adaptor/: account.rs  profile.rs  rest_api.rs
application/src/interactor/: account.rs  profile.rs  rest_api.rs
application/src/transfer/: account.rs  profile.rs
driver/: Cargo.toml
driver/src/: database.rs  error.rs  lib.rs  postgres.rs
driver/src/database/: account.rs  profile.rs
kernel/: Cargo.toml
kernel/src/: activitypub.rs  entities.rs  error.rs  lib.rs  repository.rs
kernel/src/entities/: account.rs  follow.rs  profile.rs  update_time.rs
kernel/src/repository/: account.rs  follow.rs  profile.rs
migrations/: 20230216062352_init.sql
repository/: Cargo.toml
repository/src/: postgres.rs
server/: Cargo.toml
server/src/: di.rs  lib.rs  main.rs  routes.rs
server/src/routes/: account.rs
