[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "time", "uuid"] }
time = "0.3"
ulid = "1.0.0"

async-trait = "0.1.64"

anyhow = "1.0"
thiserror = "1.0"

kernel = { path = "../kernel" }