[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
blake3 = "1.3.3"
uuid = { version = "1.3.0", features = ["serde", "v4"] }

rand = "0.8"

destructure = "0.1.2"
async-trait = "0.1.64"

anyhow = "1.0"
thiserror = "1.0"

mockall = { version = "0.11", optional = true }

kernel = { path = "../kernel" }

[dev-dependencies]
kernel = { path = "../kernel", features = ["mock"] }

[features]
mock = ["mockall"]