[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
tracing = "0.1"
async-trait = "0.1.64"
anyhow = "1"
time = "0.3"
uuid = "1.3.0"
thiserror = "1"
futures-util = "0.3"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "time", "uuid"] }
deadpool-redis = { version = "0.11.1", features = ["rt_tokio_1"] }
meilisearch-sdk = "0.22.0"
lettre = { version = "0.10" }

kernel = { path = "../kernel" }

[dev-dependencies]
time-macros = "0.2.7"
tokio = { version = "1.25.0", features = ["full"] }
kernel = { path = "../kernel", features = ["mock"] }