[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"

anyhow = "1.0"
thiserror = "1.0"

serde = "1.0"
serde_json = "1.0"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "env-filter"] }

tokio = { version = "1", features = ["full"] }

kernel = { path = "../kernel" }
driver = { path = "../driver" }
application = { path = "../application" }